# A-Toad-Emo

./: COMP6010_Weekly_Report2_20541165_BAEK_JUNHA.ipynb  README.md  install.ps1  install.sh  mock.YamlDrivenUITests.swift  mock.atdm_flow.yaml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  docs.yml
a_toad_emo/: cli.py
docs/: a_toad_emo.rst  modules.rst
docs/source/: conf.py  index.rst
tests/: test_app_installer.py  test_app_runner.py  test_cli.py  test_config_loader.py  test_emulator_launcher.py
