[tool.poetry]
name = "a-toad-emo"
version = "0.1.0"
description = ""
authors = ["BlancJH"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
appium-python-client = "^5.0.0"
pyyaml = "^6.0.2"
pytest = "^8.3.5"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
